--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
-POSTGRES_USER=mlflow_user
-POSTGRES_PASSWORD=mlflow_pwd
-MINIO_ACCESS_KEY=minio_user123
-MINIO_SECRET_KEY=minio_password123
-MLFLOW_PORT=5000
+AWS_ACCESS_KEY_ID="minio_user123"
+AWS_SECRET_ACCESS_KEY="minio_password123"
+AWS_DEFAULT_REGION="k8s00-local"
+AWS_BUCKET_NAME="mlflow"
+POSTGRES_USER="mlflow_user"
+POSTGRES_PASSWORD="mlflow_pwd"
+MLFLOW_S3_ENDPOINT_URL="http://minio:9000"
+MLFLOW_TRACKING_URI="http://localhost:5000"
