--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,20 +1,22 @@
-version: '3'
+version: '3.7'
 services:
   minio:
     image: minio/minio:latest
     ports:
       - 9000:9000
     environment:
-      - MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY}
-      - MINIO_SECRET_KEY=${MINIO_SECRET_KEY}
+      MINIO_ACCESS_KEY: ${AWS_ACCESS_KEY_ID}
+      MINIO_SECRET_KEY: ${AWS_SECRET_ACCESS_KEY}
+      MINIO_REGION_NAME: ${AWS_DEFAULT_REGION}
     command: 
       server /data
     volumes:
       - ./object_storage:/data
+    networks:
+      - internal_network
 
   postgresql:
     image: postgres:10.5
-    container_name: postgresql
     ports:
       - 5432:5432
     environment:
@@ -22,19 +24,33 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: mlflow-db
       POSTGRES_INITDB_ARGS: "--encoding=UTF-8"
-    hostname: postgresql
+    volumes:
+      - db-data:/var/lib/postgresql/data
     restart: always
+    networks:
+      - internal_network
 
   mlflow:
-    build:
-      context: .
-      args:
-        DB_URI: postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgresql:5432/mlflow-db
-        VIRTUAL_PORT: ${MLFLOW_PORT}
-        ARTIFACT_PATH: localhost:9000
-    container_name: mlflow
+    build: .
+    environment:
+      DB_CON_URL: postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgresql:5432/mlflow-db
+      MLFLOW_S3_ENDPOINT_URL: ${MLFLOW_S3_ENDPOINT_URL}
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+      AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION}
+      AWS_BUCKET_NAME: ${AWS_BUCKET_NAME}
     ports:
-      - ${MLFLOW_PORT}:${MLFLOW_PORT}
+      - 5000:5000
     depends_on:
       - postgresql
       - minio
+    networks:
+      - internal_network
+
+
+networks:
+  internal_network:
+    driver: bridge
+
+volumes:
+  db-data:
