--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ AWS_DEFAULT_REGION="k8s00-local"
 AWS_BUCKET_NAME="mlflow"
 POSTGRES_USER="mlflow_user"
 POSTGRES_PASSWORD="mlflow_pwd"
-MLFLOW_S3_ENDPOINT_URL="http://minio:9000"
+MLFLOW_S3_ENDPOINT_URL="http://localhost:9000"
 MLFLOW_TRACKING_URI="http://localhost:5000"
