fix artifacts ui on local + add official examples

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       MINIO_SECRET_KEY: ${AWS_SECRET_ACCESS_KEY}
       MINIO_REGION_NAME: ${AWS_DEFAULT_REGION}
     command: 
-      server /data --console-address :9001 --address :9000
+      server /data --console-address ":9001"
     volumes:
       - ./object_storage:/data
     networks:
@@ -36,19 +36,30 @@ services:
     platform: linux
     environment:
       DB_CON_URL: postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/mlflow-db
-      MLFLOW_S3_ENDPOINT_URL: ${MLFLOW_S3_ENDPOINT_URL}
+      MLFLOW_S3_ENDPOINT_URL: http://minio:9000
       AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
       AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
       AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION}
       AWS_BUCKET_NAME: ${AWS_BUCKET_NAME}
     ports:
-      - 3000:5000
+      - 5000
     depends_on:
       - postgres
       - minio
     networks:
       - internal_network
 
+  nginx:
+    restart: always
+    build: ./nginx
+    image: mlflow_nginx
+    container_name: mlflow_nginx
+    ports:
+      - "80:80"
+    networks:
+      - internal_network
+    depends_on:
+      - mlflow
 
 networks:
   internal_network:
