--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ AWS_BUCKET_NAME="mlflow"
 POSTGRES_USER="mlflow_user"
 POSTGRES_PASSWORD="mlflow_pwd"
 MLFLOW_S3_ENDPOINT_URL="http://localhost:9000"
-MLFLOW_TRACKING_URI="http://localhost:3000"
+MLFLOW_TRACKING_URI="http://localhost"
